--- a/annotum-base/assets/main/less/article.less
+++ b/annotum-base/assets/main/less/article.less
@@ -22,11 +22,12 @@
 /** @section Header
  -------------------------------------------------- */
 .article .header {
-	margin-bottom: 18px;
-	overflow: hidden;
+	margin-bottom: 20px;
+}
+.article .header .entry-title a {
+	color: #000;
 }
 .article .header .entry-title .title {
-	color: #000;
 	font: bold 28px Georgia, Serif;
 	margin-bottom: 5px;
 }
@@ -35,8 +36,8 @@
 }
 .article .header .meta {
 	color: #666;
-	font: italic 13px Georgia, Serif;
-
+	font: italic 13px/1.5384 Georgia, Serif;
+	margin: 0 15px 15px;
 }
 .article .header .meta a:link {
 	color: #666;
