--- a/annotum-base/assets/main/less/tools.less
+++ b/annotum-base/assets/main/less/tools.less
@@ -1,4 +1,5 @@
 .tools-bar {
+	margin-bottom: 25px;
 	padding: 17px 12px;
 }
 .tools-bar .cell {
